# houses_ms

./: .env  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 73a09e08b872_update_house_columns.py  9f899f01b8d5_create_initial_tables.py
app/: main.py
app/api/: deps.py
app/api/dependencies/: cache.py  database.py  houses.py
app/api/endpoints/: houses.py
app/core/: config.py
app/crud/: house.py
app/db/: init.py  session.py
app/models/: __init__.py  house.py
app/repositories/: db.py
app/schemas/: filters.py  house.py
