[project]
name = "houses-ms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.128.8",
    "greenlet>=3.3.1",
    "isort>=7.0.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "redis>=7.2.1",
    "ruff>=0.15.4",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.33",
    "uvicorn>=0.40.0",
]
